# tiny_linux_processes_viewer

./: .gitignore  CMakeLists.txt  DirectoryParser.cpp  DirectoryParser.h  README.md  main.cpp
src/: Directories.h  DirectoryParser.cpp  DirectoryParser.h  PID_Table.cpp  PID_Table.h  Process_manager.cpp  Process_manager.h  ProcessesStatisticsManager.cpp  ProcessesStatisticsManager.h
